test to see if the body's height set to 100vh fixes the cover on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   height: 95vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -35,6 +39,10 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -45,6 +53,10 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -55,6 +67,10 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
